Added cards and some styling

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
 
     <!-- Primary Section -->
     <div id="main" class="main-content">
-
+        <h1 class="title">My Projects</h1>
+        <ul id="projects"></ul>
     </div>
 
     <!-- Footer -->
